# ai-risajuu-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: discord.rs  main.rs  risajuu.rs  system_instruction.md
src/discord/: types.rs
src/risajuu/: chat.rs  files.rs
