[package]
name = "ai-risajuu-rs"
version = "2.0.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
serenity = "0.12"
gemini-rs = "2.0.0"
futures = "0.3.31"
reqwest = { version = "0.12.22", features = ["multipart"] }
serde_json = "1.0.140"
